fix styling and zoom on double clicks on mobile displays

--- a/style.css
+++ b/style.css
@@ -76,18 +76,23 @@ footer {
 }
 
 @media (max-width: 1000px) {
+  html,
+  body {
+    touch-action: pan-x pan-y pinch-zoom;
+  }
   h1 {
     margin-top: 5%;
-    font-size: 3.5rem;
+    font-size: 4rem;
     letter-spacing: 3.5px;
     word-spacing: 2px;
   }
   .parent-container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    margin-top: 8%;
+    margin-top: 5%;
     width: 98.5vw;
     border-radius: none;
+    box-shadow: 2px 4px 16px rgb(229, 15, 147);
   }
   .parent-container > [class^="div-"] {
     height: 275px;
@@ -97,8 +102,8 @@ footer {
     border-radius: 0;
   }
   footer {
-    font-size: 2rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    font-size: 2.2rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 }
